# znc-fish

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fish.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: Quality_Checks_and_Formatting.yml  build.yml  release.yml  test-znc-module.yml
docs/: COMMANDS.md  TROUBLESHOOTING.md
